--- a/src/app/components/tabela/tabela.component.scss
+++ b/src/app/components/tabela/tabela.component.scss
@@ -1,135 +1,7 @@
-//.mat-footer-row,
-//.mat-header-row,
-//.mat-row {
-//  display: inline-flex;
-//  min-width: 100%;
-//}
-
 .mat-header-cell {
   height: 75px;
 }
 
-//.mat-column-id {
-//  word-wrap: break-word !important;
-//  white-space: unset !important;
-//  flex: 0 0 2.5% !important;
-//  width: 2.5% !important;
-//  overflow-wrap: break-word;
-//  word-wrap: break-word;
-//  word-break: break-word;
-//
-//  -ms-hyphens: auto;
-//  -moz-hyphens: auto;
-//  -webkit-hyphens: auto;
-//  hyphens: auto;
-//}
-//
-//.mat-column-estado {
-//  word-wrap: break-word !important;
-//  white-space: unset !important;
-//  flex: 0 0 3.5% !important;
-//  width: 3.5% !important;
-//  overflow-wrap: break-word;
-//  word-wrap: break-word;
-//  word-break: break-word;
-//
-//  -ms-hyphens: auto;
-//  -moz-hyphens: auto;
-//  -webkit-hyphens: auto;
-//  hyphens: auto;
-//}
-//
-//.mat-column-nome {
-//  word-wrap: break-word !important;
-//  white-space: unset !important;
-//  flex: 0 0 8% !important;
-//  width: 8% !important;
-//  overflow-wrap: break-word;
-//  word-wrap: break-word;
-//  word-break: break-word;
-//
-//  -ms-hyphens: auto;
-//  -moz-hyphens: auto;
-//  -webkit-hyphens: auto;
-//  hyphens: auto;
-//}
-//
-//.mat-column-reajuste {
-//  word-wrap: break-word !important;
-//  white-space: unset !important;
-//  flex: 0 0 8% !important;
-//  width: 8% !important;
-//  overflow-wrap: break-word;
-//  word-wrap: break-word;
-//  word-break: break-word;
-//
-//  -ms-hyphens: auto;
-//  -moz-hyphens: auto;
-//  -webkit-hyphens: auto;
-//  hyphens: auto;
-//}
-//
-//.mat-column-idadeMinima {
-//  word-wrap: break-word !important;
-//  white-space: unset !important;
-//  flex: 0 0 3% !important;
-//  width: 3% !important;
-//  overflow-wrap: break-word;
-//  word-wrap: break-word;
-//  word-break: break-word;
-//  text-align: center;
-//
-//  -ms-hyphens: auto;
-//  -moz-hyphens: auto;
-//  -webkit-hyphens: auto;
-//  hyphens: auto;
-//}
-//
-//.mat-column-idadeMaxima {
-//  word-wrap: break-word !important;
-//  white-space: unset !important;
-//  flex: 0 0 3% !important;
-//  width: 3% !important;
-//  overflow-wrap: break-word;
-//  word-wrap: break-word;
-//  word-break: break-word;
-//  text-align: center;
-//
-//  -ms-hyphens: auto;
-//  -moz-hyphens: auto;
-//  -webkit-hyphens: auto;
-//  hyphens: auto;
-//}
-//
-//.mat-column-qtdMinVidas {
-//  word-wrap: break-word !important;
-//  white-space: unset !important;
-//  flex: 0 0 3% !important;
-//  width: 3% !important;
-//  overflow-wrap: break-word;
-//  word-wrap: break-word;
-//  word-break: break-word;
-//  text-align: center;
-//
-//  -ms-hyphens: auto;
-//  -moz-hyphens: auto;
-//  -webkit-hyphens: auto;
-//  hyphens: auto;
-//}
-//
-//.mat-column-qtdMinTitulares {
-//  word-wrap: break-word !important;
-//  white-space: unset !important;
-//  flex: 0 0 4% !important;
-//  width: 4% !important;
-//  overflow-wrap: break-word;
-//  word-wrap: break-word;
-//  word-break: break-word;
-//  text-align: center;
-//
-//  -ms-hyphens: auto;
-//  -moz-hyphens: auto;
-//  -webkit-hyphens: auto;
-//  hyphens: auto;
-//}
-//
+.mat-cell-white {
+  color: white;
+}
