--- a/src/app/components/tabela/tabela.component.html
+++ b/src/app/components/tabela/tabela.component.html
@@ -21,27 +21,27 @@
           <mat-table [style.width]="getTableWidth()" #sortTabela="matSort" [dataSource]="dataSourceTabela" matSort class="mat-elevation-z8">
             <ng-container matColumnDef="id">
               <mat-header-cell *matHeaderCellDef mat-sort-header> Id </mat-header-cell>
-              <mat-cell *matCellDef="let tabela" [style.color]="'white'" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.id}} </mat-cell>
+              <mat-cell *matCellDef="let tabela" [style]="getFontStyle(tabela)" [style.background-color]="getBackgroundColor(tabela)" (click)="selecionaTabela(tabela)" class="mouse-pointer mat-cell-white"> {{tabela.id}} </mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="nome" sticky>
               <mat-header-cell *matHeaderCellDef mat-sort-header> Nome </mat-header-cell>
-              <mat-cell *matCellDef="let tabela" [style.color]="'white'" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.nome}} </mat-cell>
+              <mat-cell *matCellDef="let tabela" [style]="getFontStyle(tabela)" [style.background-color]="getBackgroundColor(tabela)" (click)="selecionaTabela(tabela)" class="mouse-pointer mat-cell-white"> {{tabela.nome}} </mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="estado" sticky>
               <mat-header-cell *matHeaderCellDef mat-sort-header> Estado </mat-header-cell>
-              <mat-cell *matCellDef="let tabela" [style.color]="'white'" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.estado.sigla}} </mat-cell>
+              <mat-cell *matCellDef="let tabela" [style]="getFontStyle(tabela)" [style.background-color]="getBackgroundColor(tabela)" (click)="selecionaTabela(tabela)" class="mouse-pointer mat-cell-white"> {{tabela.estado.sigla}} </mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="operadora" sticky>
               <mat-header-cell *matHeaderCellDef mat-sort-header> Operadora </mat-header-cell>
-              <mat-cell *matCellDef="let tabela" [style.color]="'white'" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.operadora.nome}} </mat-cell>
+              <mat-cell *matCellDef="let tabela" [style]="getFontStyle(tabela)" [style.background-color]="getBackgroundColor(tabela)" (click)="selecionaTabela(tabela)" class="mouse-pointer mat-cell-white"> {{tabela.operadora.nome}} </mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="administradora" sticky>
               <mat-header-cell *matHeaderCellDef mat-sort-header> Adm | Detalhes </mat-header-cell>
-              <mat-cell *matCellDef="let tabela" [style.color]="'white'" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer">
+              <mat-cell *matCellDef="let tabela" [style]="getFontStyle(tabela)" [style.background-color]="getBackgroundColor(tabela)" (click)="selecionaTabela(tabela)" class="mouse-pointer mat-cell-white">
                 <span *ngIf="tabela.categoria === 'Adesão'">
                   {{tabela.administradora?.nome}}
                 </span>
@@ -53,32 +53,32 @@
 
             <ng-container matColumnDef="reajuste">
               <mat-header-cell *matHeaderCellDef mat-sort-header> Reajuste </mat-header-cell>
-              <mat-cell *matCellDef="let tabela" [style.color]="'white'" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.reajuste}} </mat-cell>
+              <mat-cell *matCellDef="let tabela" [style]="getFontStyle(tabela)" [style.background-color]="getBackgroundColor(tabela)" (click)="selecionaTabela(tabela)" class="mouse-pointer mat-cell-white"> {{tabela.reajuste}} </mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="idadeMinima">
               <mat-header-cell *matHeaderCellDef mat-sort-header> Idade Min. </mat-header-cell>
-              <mat-cell *matCellDef="let tabela" [style.color]="'white'" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.idadeMinima}} </mat-cell>
+              <mat-cell *matCellDef="let tabela" [style]="getFontStyle(tabela)" [style.background-color]="getBackgroundColor(tabela)" (click)="selecionaTabela(tabela)" class="mouse-pointer mat-cell-white"> {{tabela.idadeMinima}} </mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="idadeMaxima">
               <mat-header-cell *matHeaderCellDef mat-sort-header> Idade Max.  </mat-header-cell>
-              <mat-cell *matCellDef="let tabela" [style.color]="'white'" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.idadeMaxima}} </mat-cell>
+              <mat-cell *matCellDef="let tabela" [style]="getFontStyle(tabela)" [style.background-color]="getBackgroundColor(tabela)" (click)="selecionaTabela(tabela)" class="mouse-pointer mat-cell-white"> {{tabela.idadeMaxima}} </mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="qtdMinVidas">
               <mat-header-cell *matHeaderCellDef mat-sort-header> Qtd. Min. Vidas </mat-header-cell>
-              <mat-cell *matCellDef="let tabela" [style.color]="'white'" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.qtdMinVidas}} </mat-cell>
+              <mat-cell *matCellDef="let tabela" [style]="getFontStyle(tabela)" [style.background-color]="getBackgroundColor(tabela)" (click)="selecionaTabela(tabela)" class="mouse-pointer mat-cell-white"> {{tabela.qtdMinVidas}} </mat-cell>
             </ng-container>
 
             <ng-container matColumnDef="qtdMinTitulares">
               <mat-header-cell *matHeaderCellDef mat-sort-header> Qtd. Min. Titulares </mat-header-cell>
-              <mat-cell *matCellDef="let tabela" [style.color]="'white'" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer"> {{tabela.qtdMinTitulares}} </mat-cell>
+              <mat-cell *matCellDef="let tabela" [style]="getFontStyle(tabela)" [style.background-color]="getBackgroundColor(tabela)" (click)="selecionaTabela(tabela)" class="mouse-pointer mat-cell-white"> {{tabela.qtdMinTitulares}} </mat-cell>
             </ng-container>
 
             <ng-container [matColumnDef]="profissao.nome" *ngFor="let profissao of todasProfissoes">
               <mat-header-cell *matHeaderCellDef mat-sort-header> {{profissao.nome }} </mat-header-cell>
-              <mat-cell *matCellDef="let tabela" [style.color]="'white'" [style.background-color]="tabela.operadora.cor" (click)="selecionaTabela(tabela)" class="mouse-pointer">
+              <mat-cell *matCellDef="let tabela" [style]="getFontStyle(tabela)" [style.background-color]="getBackgroundColor(tabela)" (click)="selecionaTabela(tabela)" class="mouse-pointer mat-cell-white">
                 <div style="overflow: auto; height: 48px;">
                   {{ getNomesEntidadesPorProfissao(tabela, profissao.nome) }}
                 </div>
@@ -116,7 +116,7 @@
         <mat-card-content>
           <div style="display: flex; margin-bottom: 20px">
             <div style="width: 60%">
-              <mat-radio-group (ngModelChange)="filtraTabela();" [(ngModel)]="filtroTabela.categoria" >
+              <mat-radio-group (ngModelChange)="filtraTabela();" [(ngModel)]="filtroTabela.categoria">
                 <mat-radio-button style="padding-right: 15px" *ngFor="let categoria of todasCategorias" [value]="categoria">
                   {{categoria}}
                 </mat-radio-button>
@@ -149,21 +149,21 @@
 
           <mat-form-field appearance="outline" style="width: 100%">
             <mat-label>Estado</mat-label>
-            <mat-select (ngModelChange)="filtraTabela()" [(ngModel)]="filtroTabela.estados" multiple>
+            <mat-select (ngModelChange)="filtraTabela()" [(ngModel)]="filtroTabela.estados" [compareWith]="isObjIgualByNome" multiple>
               <mat-option *ngFor="let estado of todosEstadosTabela;" [value]="estado">{{estado.sigla}}</mat-option>
             </mat-select>
           </mat-form-field>
 
           <mat-form-field appearance="outline" style="width: 100%">
             <mat-label>Operadoras</mat-label>
-            <mat-select (ngModelChange)="filtraTabela()" [(ngModel)]="filtroTabela.operadoras" multiple>
+            <mat-select (ngModelChange)="filtraTabela()" [(ngModel)]="filtroTabela.operadoras" [compareWith]="isObjIgualById" multiple>
               <mat-option *ngFor="let operadora of todasOperadorasTabela;" [value]="operadora">{{operadora.nome}}</mat-option>
             </mat-select>
           </mat-form-field>
 
           <mat-form-field *ngIf="filtroTabela.categoria === 'Adesão'" appearance="outline" style="width: 100%">
             <mat-label>Administradoras</mat-label>
-            <mat-select (ngModelChange)="filtraTabela()" [(ngModel)]="filtroTabela.administradoras" multiple>
+            <mat-select (ngModelChange)="filtraTabela()" [(ngModel)]="filtroTabela.administradoras" [compareWith]="isObjIgualById" multiple>
               <mat-option *ngFor="let administradora of todasAdministradorasTabela;" [value]="administradora">{{administradora.nome}}</mat-option>
             </mat-select>
           </mat-form-field>
